Added kafka with simple consumer-producer code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.14)
 project(DockerDbApp)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(DockerDbApp main.cpp)
+add_executable(KafkaConsumerApp kafka-test/KafkaConsumerApp.cpp)
+add_executable(KafkaProducerApp kafka-test/KafkaProducerApp.cpp)
 
-target_include_directories(DockerDbApp PRIVATE /usr/include/pqxx)
-target_link_directories(DockerDbApp PRIVATE /usr/lib)
-target_link_libraries(DockerDbApp PRIVATE pqxx pq)
+target_link_libraries(KafkaConsumerApp PRIVATE rdkafka)
+target_link_libraries(KafkaProducerApp PRIVATE rdkafka)
