Added simple postgres app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(DockerDbApp)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(DockerDbApp main.cpp)
+add_executable(PostgresTestApp postgresql-test/PostgresTestApp.cpp)
 
-target_include_directories(DockerDbApp PRIVATE /usr/include/pqxx)
-target_link_directories(DockerDbApp PRIVATE /usr/lib)
-target_link_libraries(DockerDbApp PRIVATE pqxx pq)
+target_include_directories(PostgresTestApp PRIVATE /usr/include/pqxx)
+target_link_directories(PostgresTestApp PRIVATE /usr/lib)
+target_link_libraries(PostgresTestApp PRIVATE pqxx pq)
