--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -54,7 +54,7 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.8.0
-    container_name: zookeeper
+    container_name: zookeeper_container
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -63,7 +63,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.8.0
-    container_name: kafka
+    container_name: kafka_container
     depends_on:
       - zookeeper
     ports:
